--- a/paper.tex
+++ b/paper.tex
@@ -15,20 +15,17 @@
 }
 
 \begin{abstract}
-Dfsjkhc sdjfh sdjlkfh sdljkf hlasdjkf haljksdfh asdjlfh als. asdfjk asdjflkha
-sdfljhas dfljashd fljkasdhf jlaksdfh lajskdfh alsjkdfh asldjkf hasldjkfh
-asljkdfh asljkdf hasljdkfh asljkdfh asljkdfh asljkdfh asljkdfh asljkdfh
-asljkdfh alsjkdfh asljkdfh asljkdfh asljkdfh asljkdfh asldkjfh asldkjfh
-aslkdjfh.
+Daten in einem Computernetzwerk sicher übertragen zu können, ist heutzutage selbstverständlich. Wenn auch unbemerkt, kommt dafür häufig SSH zum Einsatz. 
+Remote-Terminal-Sitzung, Datenübertragung, Einbinden von Verzeichnissen --- all diese Funktionalitäten sind mit SSH komfortabel und vorallem gesichert möglich.
+Gleichwohl ist es wichtig, bei der Verwendung von SSH auf einige 
+sicherheitsrelevante Aspekte zu achten.
 
-Asljkdfh alsjkdfh asljkdfh asljkdfh asljkdfh asljkdfh asldkjfh asldkjfh
-asljkdfh alsjkdfh asljkdfh asljkdfh asljkdfh asljkdfh asldkjfh asldkjfh
-asljkdfh alsjkdfh asljkdfh asljkdfh asljkdfh asljkdfh asldkjfh asldkjfh
-aslkdjfh.
 \end{abstract}
 
-\keywords{SSH, OpenSSH, Verschlüsselung, TCP/IP-Protokoll}
-\categories{Allgemein}
+
+
+%\keywords{SSH, OpenSSH, Verschlüsselung, TCP/IP-Protokoll}
+%\categories{Allgemein}
 
 \begin{document}
 
@@ -87,25 +84,17 @@ Es wurde als freie Software veröffentlicht \cite[S. 11]{SSH}. Die Implementieru
 
 Aktuell gibt es verschiedene Implementierungen des SSH-Protokolls. Je nach Einsatzzweck (mobiles Gerät/Workstation) oder Betriebssystem gibt es verschiedene Alternativen. Im Folgenden ist eine kleine Auswahl von Implementierungen mit Kurzbeschreibung aufgeführt.
 
-\subparagraph{PuTTY} steht unter der MIT-Lizenz und stellt einen SSH-Client zur Verfügung. Hauptsächlich wird es unter Windows verwendet, ist aber auch für UNIX-Systeme verfügbar.\cite{putty}  --> Buch ProOpenSSH 
+\subparagraph{\BF {PuTTY}} steht unter der MIT-Lizenz und stellt einen SSH-Client zur Verfügung. Hauptsächlich wird es unter Windows verwendet, ist aber auch für UNIX-Systeme verfügbar.\cite{putty}  --> Buch ProOpenSSH 
 
-\subparagraph{OpenSSH} Server und Client; vorinstalliert auf allen Linux-Systemen, BSD-Lizenz
+\subparagraph{\BF {Dropbear} } ist eine Implementierung des SSH-2-Protokolls und steht unter der MIT-Lizenz \cite{dropbear}. Dropbear ist vorallem für Systeme mit geringer Prozessorleistung und geringer Speicherkapazität interessant. Es ist auf verschiedenen POSIX-basierten Systemen lauffähig. Eine entsprechende Auflistung ist auf der offiziellen Webseite von Dropbear \footnote{https://matt.ucc.asn.au/dropbear/dropbear.html\#platforms} zu finden.
 
-\subparagraph{Dropbear} ist eine Implementierung des SSH-2-Protokolls und steht unter der MIT-Lizenz \cite{dropbear}. Dropbear ist vorallem für Systeme mit geringer Prozessorleistung und geringer Speicherkapazität interessant. Es ist auf verschiedenen POSIX-basierten Systemen lauffähig. Eine entsprechende Auflistung ist auf der offiziellen Webseite von Dropbear \footnote{https://matt.ucc.asn.au/dropbear/dropbear.html\#platforms} zu finden.
+\subparagraph{\BF {Mosh}} (mobile shell) bietet erweiterte Funktionalitäten, vorallem für mobile Geräte. Beispielsweise wird die Verbindung bei Roaming aufrechterhalten. Mosh ist keine direkte Implementierung des SSH-Protokolls. Es überträgt keinen Byte-String zwischen Client und Server. Vielmehr tauschen Client und Server einen Snapshot des aktuellen Bildschirms aus \cite{mosh}.
 
-\subparagraph{Mosh} (mobile shell) bietet erweiterte Funktionalitäten, vorallem für mobile Geräte. Beispielsweise wird die Verbindung bei Roaming aufrechterhalten. Mosh ist keine direkte Implementierung des SSH-Protokolls. Es überträgt keinen Byte-String zwischen Client und Server. Vielmehr tauschen Client und Server einen Snapshot des aktuellen Bildschirms aus \cite{mosh}.
-
-\subparagraph{Lsh} ist eine freie Implementierung des SSH-2-Protokolls, lizenziert untere der GNU GPL \cite{lsh}. --> evtl entfernen
-
-
-
-
-
+\subparagraph{\BF {OpenSSH}} Server und Client; vorinstalliert auf allen Linux-Systemen, BSD-Lizenz, auf Windows mit Cygwin möglich
 
 \section{OpenSSH}
 
-OpenSSH dient nun dazu, elementare Funktionalitäten von SSH vorzustellen. Der Client wird unter OpenSSH mit \IT ssh und der Server mit \IT sshd bezeichnet. Alle Konfigurationen bezüglich Client und Server sind in den jeweiligen Konfigurationsdateien zu finden (Client: ssh\_config, Server: sshd\_config)
-
+OpenSSH dient nun dazu, elementare Funktionalitäten von SSH vorzustellen. Der Client wird unter OpenSSH mit \IT ssh und der Server mit \IT sshd bezeichnet. Alle Konfigurationen bezüglich Client und Server sind in den jeweiligen Konfigurationsdateien (Client: ssh\_config, Server: sshd\_config) zu finden. 
 
 Für alle Funktionalitäten gibt es unter der jeweiligen \IT manpage (Manual Page) eine Übersicht der verfügbaren Optionen (\$ man ssh, \$ man scp, \$ man sshfs, \$man ssh-keygen, \$ man ssh-copy-id). 
 
@@ -143,8 +132,7 @@ Bei jedem Sitzungsaufbau wird clientseitig geprüft, ob der öffentliche Schlüs
 \IT scp steht für \IT secure \IT copy und ermöglicht die gesicherte Übertragung von Daten zwischen Client und Server. Es können einzelne Dateien bis hin zu ganzen Verzeichnisstrukturen kopiert werden. \cite[S. 80]{openssh_book} Mit dem Befehl \IT scp, der Datei, die kopiert werden soll und der Angabe des Zielservers sind alle Pflichtparameter vorhanden. Nach Abfrage des Passworts durch den Server wird der Fortschritt der Datenübertragung angezeigt.
 
 \begin{program}
-[sue@kaktus ~]\$ scp hello\_all.txt
-micra@login.rz.hs-augsburg.de:~
+[sue@kaktus ~]\$ scp hello\_all.txt micra@login.rz.hs-augsburg.de:~
 micra@login.rz.hs-augsburg.de's password:
 hello\_all.txt        100\% 6297     6.2KB/s   00:00
 \end{program}
@@ -163,27 +151,30 @@ Mit \IT sshfs (\IT Secure \IT Shell \IT File \IT System) lassen sich entfernte V
 
 Zum Einhängen ist der Befehl \IT sshfs, der \IT host und der \IT mountpoint,
 \Dh der Pfad an dem das Verzeichnis eingehängt werden soll, notwendig.
-Mit dem Befehl \IT unmounting \IT fusermount lässt sich das eingehängte Verzeichnis entfernen.
+Mit dem Befehl \IT fusermount \IT -u \IT mountpoint lässt sich das eingehängte Verzeichnis entfernen.
 
 \begin{program}
 sshfs [user@]host:[dir] mountpoint [options]
-
 # Verzeichnis aushängen:
-unmounting fusermount -u mountpoint
+fusermount -u mountpoint
 \end{program}
 
+--> hier noch bearbeiten, nicht korrekt vom Sinn
 Als Vorteil gegenüber vergleichbaren Tools, wie NFS oder Samba nennen die Entwickler von \IT sshfs beispielsweise das automatische Einhängen der Verzeichnisse über ein Shell-Skript. Außerdem bietet \IT sshfs den Vorteil, dass Verzeichnisse an beliebiger Stelle eingehängt werden können, unabhängig von zentral verwalteten Tabellen (/etc/fstab), die festgelegte Mount-Verzeichnisse enthält. \cite{sshfs}
 
-\subsection{Schlüssel generieren mit \IT ssh-\IT keygen}
+\subsection{Public-Key-Authentifizierung (\IT ssh-\IT keygen, \IT ssh-copy-id)}
 
-Der Client authentifiziert sich beim Server standardmäßig über die Eingabe eines Passworts. Die Verwendung von Passwörtern bringt jedoch verschiedene Nachteile mit sich. Häufig werden unsichere Passwörter verwendet, die leicht auf Brute-Force-Attacken oder Wörterbuchanalysen ansprechen.\cite{schneier} Außerdem kann das Passwort auf einem unterwanderten Server abgefangen werden, auch wenn die Übertragung selbst gesichert war. \cite[S. 29]{SSH}
+Der Client authentifiziert sich beim Server standardmäßig über die Eingabe eines Passworts. Die Verwendung von Passwörtern bringt jedoch verschiedene Nachteile mit sich. Häufig werden unsichere Passwörter verwendet, die leicht auf Brute-Force-Attacken oder Wörterbuchattacken ansprechen.\cite{schneier} Außerdem kann das Passwort auf einem unterwanderten Server abgefangen werden, auch wenn die Übertragung selbst gesichert war. \cite[S. 29]{SSH}
 
-Daher bietet OpenSSH \IT Public-Key-Authentifizierung an. Hierzu wird ein Schlüsselpaar bestehend aus einem privaten und einem öffentlichen Schlüssel benötigt. Der private Schlüssel ist geheim, der öffentliche Schlüssel wird auf dem Server hinterlegt. \cite[S. 114]{openssh_book} (näheres hierzu bei Ablauf einer sicheren Verbindung). An dieser Stelle kommt \IT ssh-keygen zum Einsatz. Mit diesem Tool ist es möglich, das Schlüsselpaar unkompliziert und komfortabel erstellen zu lassen. Standardmäßig erzeugt \IT ssh-keygen ein RSA-Schlüsselpaar. Andere Verschlüsselungsverfahren können durch Optionen ausgewählt werden (welche sind das genau?). --> evtl. Referenz Buch, PublicKeyAuth
-
---> Schlüssellänge
+Daher bietet OpenSSH \IT Public-Key-Authentifizierung an. Hierzu wird ein Schlüsselpaar bestehend aus einem privaten und einem öffentlichen Schlüssel benötigt. Der private Schlüssel ist geheim, der öffentliche Schlüssel wird auf dem Server hinterlegt. \cite[S. 114]{openssh_book} (näheres hierzu bei Ablauf einer sicheren Verbindung). An dieser Stelle kommt \IT ssh-keygen zum Einsatz. Mit diesem Tool ist es möglich, das Schlüsselpaar unkompliziert und komfortabel erstellen zu lassen. Standardmäßig erzeugt \IT ssh-keygen ein RSA-Schlüsselpaar \footnote{RSA ist ein asymmetrisches Verschlüsselungsverfahren und steht für Rivest, Shamir und Adleman}. Alternative Verschlüsselungsverfahren sind DSA, ECDSA und RSA1. Diese können mit der Option \IT -t und der Angabe des gewünschten Verfahrens gewählt werden. Für RSA verwendet OpenSSH standardmäßig eine Schlüssellänge von 2048 Bit. Laut aktueller Einschätzung ist die Schlüssellänge von 2048 Bit langfristig ausreichend. Grundsätzlich gilt, je größer die Schlüssellängen, desto länger dauert es, den Schlüssel mit einer Brute-Force-Attacke zu berechnen. Längere Schlüssel verlangsamen das Verfahren jedoch. Je nach Einsatzzweck müssen diese Umstände berücksichtigt werden. \cite{bsi} \cite {bsi2}
 
 \begin{program}
-[sue@kaktus ~]\$ ssh-keygen
+# Option -b für die Wahl der Schlüssellänge
+[sue@kaktus ~]\$ ssh-keygen -b 4096 
+
+# Option -t für die Wahl des Verschlüsselungsverfahrens
+[sue@kaktus ~]\$ ssh-keygen -t dsa
+
 \end{program}
 
 --> es kann ein Passwort vergeben werden, um ssh-Schlüssel zu sichern
@@ -210,7 +201,7 @@ dass die Passphrase lediglich einmal pro Session abgefragt wird. Für alle weite
 SSH macht es möglich, den Datenstrom von TCP/IP-Anwendungen zu verschlüsseln.
 Das wird \IT Port-Forwarding, oder auch \IT Tunneling genannt. \cite[S. 337]{SSH} Um Port-Forwarding ausführen zu können, muss TCP-Forwarding in der Konfigurationsdatei des Servers als erlaubt gekennzeichnet sein. \cite[S. 151]{openssh_book}
 
-Mit \IT X-Forwarding kann die entfernte grafische Oberfläche auf dem lokalen Rechner dargestellt werden. 
+Mit \IT X-Forwarding kann die entfernte grafische Oberfläche auf dem lokalen Rechner dargestellt werden. Das X-Protokoll selbst ist ein Window-System für UNIX, überträgt Daten aber ungesichert.
 
 \paragraph{Konfigurationsdateien}
 
@@ -227,10 +218,24 @@ Mit \IT X-Forwarding kann die entfernte grafische Oberfläche auf dem lokalen Re
 \paragraph{Verbindungaufbau}
 Der Aufbau einer sicheren Verbindung läuft grob wie folgt ab: Der Client sendet eine Anfrage an den Server. SSH nutzt hier standardmäßig Port 22, das ist jedoch konfigurierbar. Der Server gibt seine Identität (host-ID), das verwendete Protokoll (SSH-1, SSH-2) und weitere Daten bekannt. Falls der Client zum ersten Mal mit dem Server kommuniziert, wird eine Warnung ausgegeben. Fährt der Client fort, wird die host-ID in die Liste der \IT known\_hosts aufgenommen. Für die Sitzung wird mittels Diffie-Hellman-Verfahren ein Session-Key erzeugt. Abschließend wählt der Client eine der vorgeschlagenen symmetrischen Verschlüsselungsverahren --> angeben, welche zur Auswahl stehen bei SSH
 
-\paragraph{Authentifizierung}
+\begin{figure}[!h] 
+\centering 
+\includegraphics[scale=0.25]{./images/verbindungsaufbau.png}
+\label{fig:abb2} 
+\caption[Abbildung 2]{Grober Ablauf des Verbindungsaufbaus bei SSH, eigene Darstellung.} 
+\end{figure}
+
+\paragraph{Public-Key-Authentifizierung}
 An dieser Stelle ist die Verbindung verschlüsselt und die Authentifizierung findet statt. Für eine Public-Key-Authentifizierung sieht dies folgendermaßen aus: Der Server generiert einen Zufalls-String und verschlüsselt diesen mit dem öffentlichen Schlüssel des Clients. Der Client entschlüsselt diesen Zufalls-String mit seinem privatem Schlüssel. Anschließend kombiniert der Client den entschlüsselten String mit dem Session-Key und generiert daraus eine md5-Hashsumme. Der Server führt diese Aktion ebenfalls durch und vergleicht die beiden md5-Hashsummen. Stimmen die beiden Summen überein, ist der Client erfolgreich authentifiziert. \cite[S. 64]{SSH} \cite{man_ssh}
 
+sdfsdf
 
+\begin{figure}[!h] 
+\centering 
+\includegraphics[scale=0.25]{./images/pubkey.png}
+\label{fig:abb3} 
+\caption[Abbildung 3]{Ablauf der Public-Key-Authentifizierung bei SSH, eigene Darstellung, angelehnt an \cite [S. 34]{SSH}} 
+\end{figure}
 
 
 \subsection{Aktuelle/Bekannte Schwachstellen}
@@ -241,14 +246,22 @@ http://www.openssh.com/security.html
 \subsection{Anforderungen an den Serveradministrator}
 
 Der Administrator eines SSH-Servers muss grundsätzlich dafür sorgen, dass die verwendete Software aktuell ist. Die Konfigurationsdatei enthält Standardwerte und muss auf den jeweiligen Anwendungsfall angepasst werden.
-Der Zugriff auf die Konfigurationsdatei ist nur mit Root-Rechten möglich.
+Änderungen in der Konfigurationsdatei sind nur mit Root-Rechten möglich.
 Handelt es sich um ein sehr sicherheitskritisches System, könnte man eine Prüfsumme (md5, SHA1) der Konfigurationsdatei erstellen, um mögliche Manipulationen zu erkennen. \cite[S. 50]{openssh_book}
 
 Empfehlenswerte Änderungen/Einstellungen der Konfiguration:
 
-\IT PermitEmptyPasswords no: Diese Option muss zwingend auf \IT no gesetzt sein. Andererseits ist es möglich, dass sich Clients ohne Passwort einloggen können.
+\IT PermitEmptyPasswords no: Diese Option muss zwingend auf \IT no gesetzt sein. Andererseits ist es möglich, dass sich Clients ohne eine Passwort einloggen können.
+
+\IT Protocol 2: Eine Verwendung von SSH-1-Protokoll müsste explizit angegeben werden. Standardmäßig ist Version 2 gesetzt.
 
 \IT RhostsAuthentication no, RhostsRSAAuthentication no, IgnoreRhosts yes, IgnoreRootRhosts yes: 
+
+Zugriffsbeschränkungen:
+
+Wahl der Schlüssellänge:
+
+
 
 
 
